Fix chat send button contrast

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -68,10 +68,6 @@ textarea {
   font: inherit;
 }
 
-button {
-  color: inherit;
-}
-
 img,
 svg,
 canvas,
